--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#shoes">shoes</a>
+                  <a class="nav-link" href="#shoes">Shoes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#backpack">backpack</a>
+                  <a class="nav-link" href="#backpack">Backpack</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#subscribe">subscribe</a>
+                  <a class="nav-link" href="#subscribe">Subscribe</a>
                 </li>
               </ul>
             </div>
@@ -53,8 +53,8 @@
               <div class="carousel-item">
                 <div class="row d-flex align-items-center">
                     <div class="col-md-7">
-                      <h1>Mega LCD TV for sports</h1>
-                        <p>This the best TV in the world</p>
+                      <h1>Mega Head Phone for sports</h1>
+                        <p>This the best Head Phone in the world</p>
                         <h1 class="price">$420</h1>
                         <button class="buy-now">Buy Now</button>
                     </div>
@@ -66,8 +66,8 @@
               <div class="carousel-item">
                 <div class="row d-flex align-items-center">
                     <div class="col-md-7">
-                      <h1>Mega LCD TV for sports</h1>
-                        <p>This the best TV in the world</p>
+                      <h1>Mega X-Box for sports</h1>
+                        <p>This the best X-Box in the world</p>
                         <h1 class="price">$800</h1>
                         <button class="buy-now">Buy Now</button>
                     </div>
@@ -94,19 +94,19 @@
         <div class="col-md-4">
          <div class="cat1 d-flex justify-content-between align-items-center">
           <h1>Watch</h1>
-          <img src="/panda-commerce/categories/watch.png" alt="">
+          <img src="panda-commerce/categories/watch.png" alt="">
          </div>
         </div>
         <div class="col-md-4">
           <div class="cat2 d-flex justify-content-between align-items-center">
             <h1>Bag</h1>
-          <img src="/panda-commerce/categories/bag.png" alt="">
+          <img src="panda-commerce/categories/bag.png" alt="">
           </div>
         </div>
         <div class="col-md-4">
           <div class="cat3 d-flex justify-content-between align-items-center">
             <h1>Shoes</h1>
-          <img src="/panda-commerce/categories/shoes.png" alt="">
+          <img src="panda-commerce/categories/shoes.png" alt="">
           </div>
         </div>
       </div>
@@ -115,7 +115,7 @@
   <h2>Shose</h2>
   <div class="card-deck">
     <div class="card">
-      <img src="/panda-commerce/shoes/shoe-1.png" class="card-img-top" alt="...">
+      <img src="panda-commerce/shoes/shoe-1.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">supply350</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -124,7 +124,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="/panda-commerce/shoes/shoe-2.png" class="card-img-top" alt="...">
+      <img src="panda-commerce/shoes/shoe-2.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Nike 360</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -133,7 +133,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="/panda-commerce/shoes/shoe-3.png" class="card-img-top" alt="...">
+      <img src="panda-commerce/shoes/shoe-3.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Red Airme</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
@@ -148,7 +148,7 @@
   <h2>Backpack</h2>
   <div class="card-deck">
     <div class="card">
-      <img src="/panda-commerce/bags/bag-1.png" class="card-img-top" alt="...">
+      <img src="panda-commerce/bags/bag-1.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -160,7 +160,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="/panda-commerce/bags/bag-2.png" class="card-img-top" alt="...">
+      <img src="panda-commerce/bags/bag-2.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -171,7 +171,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="/panda-commerce/bags/bag-3.png" class="card-img-top" alt="...">
+      <img src="panda-commerce/bags/bag-3.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -193,7 +193,7 @@
 </div>
 <div class="container">
   <footer>
-    <small>@2020 panda commerce. all right reserved. sofia ,bulgeria</small>
+    <small>©2020 panda commerce. all right reserved. sofia ,bulgeria</small>
   </footer>
 </div>
 
